--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
   <div class="header">
     <ul class="main-menu">
       <li><a href="#">all sessions</a></li>
-      <li><a href="#">register</a></li>
-      <li><a href="#">login</a></li>
+      <li><%= link_to 'sign up', new_user_path %></li>
+      <li><%= link_to 'sign in', new_session_path %></li>
     </ul>
   </div>
 
