--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -15,7 +15,7 @@
 <div class="separator"></div>
 
 <ul class="latest-events">
-  <li class="pair-session">
+  <li class="session-full">
     <p class="title">NEW PAIR SESSION</p>
 
     <div class="avatar">
@@ -34,7 +34,7 @@
 
   <div class="separator"></div>
 
-  <li class="pair-session">
+  <li class="session-full">
     <p class="title">new member</p>
 
     <div class="avatar">
