--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -33,45 +33,16 @@
 .latest-events {
   @include ul-no-style;
 
-  .information {
-    margin-left: 30px;
-    width: 600px;
 
-    .name {
-      @include font-trebuchet(15px);
+  .session-full {
+    @extend .session-with-avatar;
+    @extend .session-with-contact;
 
-      color: $light-blue;
-
-      span {
-        color: $light-grey;
-        font-size: $small-font;
+    .information {
+      .title {
+        text-transform: uppercase;
+        font-weight: bold;
       }
     }
-
-    .brief-information {
-      font-size: $medium-font;
-    }
-
-    .bottom-info-label {
-      font-size: $small-font;
-      color: $light-grey;
-      float: left;
-      width: 400px;
-    }
-
-    .when {
-      span {
-        font-size: 1em;
-      }
-
-      color: $light-grey;
-      font-size: $small-font;
-      float: left;
-    }
-  }
-
-  .button {
-    margin-right: 100px;
-    margin-top: 20px;
   }
 }
