--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -31,6 +31,9 @@ $input-text-color: #666;
 $input-width: 200px;
 $input-background-position: 215px;
 
+$calendar-container-color: #e3e3e5;
+$calendar-container-height: 260px;
+
 //---fonts---
 @font-face {
   font-family: 'letspair';
@@ -185,6 +188,9 @@ form .button {
 
 //---sessions styles----
 .session {
+  overflow: hidden;
+  margin: 20px 0 20px 0;
+
   .information {
     float: left;
     width: 600px;
@@ -248,6 +254,8 @@ form .button {
 .session-full {
     @extend .session-with-avatar;
     @extend .session-with-contact;
+
+    overflow: hidden;
 
     .information {
       .title {
