--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,9 +2,26 @@
 
 .users-sessions {
   .calendar-container {
-    background-color: #e3e3e5;
-    height: 260px;
+    background-color: $calendar-container-color;
+    height: $calendar-container-height;
     padding: 30px;
+  
+    calendar {
+      float: left;
+    }
+
+    .cloud {
+      float: right;
+      background-image: image-url('cloud.png');
+      width: 253px;
+      height: 77px;
+
+      font-size: $medium-font;
+      font-style: italic;
+      color: #767676;
+      padding: 40px 20px 20px 40px;
+      margin-right: 30px;
+    }
   }
 
   .sessions {
