--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -4,7 +4,7 @@
       <%= image_tag "test_avatar.jpg" %>
     </div>
     <div class="information">
-      <p class="name">Funky super user <span>GMT-5:00 Eastern Time (US & Canada)</span></p>
+      <p class="name">Funky super user <span>GMT-5:00 Eastern Time (US & Canada)</span>&nbsp<a class='edit-profile' href="#">edit</a></p>
       <p class="brief-information">I'm humble bundle ruby on rails developer who loves meeting new people</p>
       <p class="bottom-info-label"><span class="highlighted-text">skills: </span>&nbsp node.js, ruby, ruby on rails</p>
     </div>
@@ -14,6 +14,8 @@
 <div class="user-sessions" ng-app="letspair" ng-controller="UserSessionsCtrl">
   <div class="calendar-container">
     <calendar daychange='loadDaySessions()'></calendar>
+
+    <a class="edit-sessions" href="#">edit</a>
   </div>
 
   <ul class="sessions">
