--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -175,11 +175,22 @@ textarea {
   text-transform: uppercase;
 }
 
-form .button {
+form .button, .calendar-container .button, .edit-buttons .button {
   background-image: image-url('button_small.png');
   width: 90px;
   height: 40px;
   text-transform: uppercase;
+  text-align: center;
+  border: none;
+  font-size: $small-font;
+  color: white;
+}
+
+.edit-buttons .button {
+  background-image: image-url('button_tiny.png');
+  width: 45px;
+  height: 20px;
+  text-transform: lowercase;
   text-align: center;
   border: none;
   font-size: $small-font;
@@ -226,6 +237,7 @@ form .button {
         font-size: $small-font;
       }
     }
+
   }
 }
 
@@ -252,15 +264,23 @@ form .button {
 }
 
 .session-full {
-    @extend .session-with-avatar;
-    @extend .session-with-contact;
+  @extend .session-with-avatar;
+  @extend .session-with-contact;
 
-    overflow: hidden;
+  overflow: hidden;
 
-    .information {
-      .title {
-        text-transform: uppercase;
-        font-weight: bold;
-      }
+  .information {
+    .title {
+      text-transform: uppercase;
+      font-weight: bold;
     }
   }
+}
+
+.session-view {
+  @extend .session;
+}
+
+.session-edit {
+  
+}
