--- a/app/views/user_pairsessions/index.erb
+++ b/app/views/user_pairsessions/index.erb
@@ -35,5 +35,45 @@
         <input type="button" class="button" value='delete'>
       </ul>
     </li>
+
+    <div class="separator-white"></div>
+
+    <li class="session-edit">
+      <form>
+          <div class='field'>
+            <label>note:</label>
+            <div class='control'>
+              <textarea class='note' rows='4' cols='80'>This is a note</textarea>
+            </div>
+          </div>
+
+          <div class='field'>
+            <label>technologies:</label>
+            <div class='control'>
+              <input class='technologies' type='text' value='ruby on rails, ruby, coffeescript'></input>
+            </div>
+          </div>
+
+          <div class='field'>
+            <label>start time:</label>
+            <div class='control'>
+              <input class='start-time' type='text' value=''></input>
+            </div>
+          </div>
+
+          <div class='field'>
+            <label>end time:</label>
+            <div class='control'>
+              <input class='end-time' type='text' value=''></input>
+            </div>
+          </div>
+
+          <ul class="edit-buttons">
+            <input type="button" class="button" value='edit'>
+            <input type="button" class="button" value='delete'>
+          </ul>
+        </form>
+    </li>
+
   </ul>
 </div>
