fix bug with time displaying after save. add loading pairsessions for pairsessions page

--- a/app/assets/stylesheets/edit_user_pairsessions.css.scss
+++ b/app/assets/stylesheets/edit_user_pairsessions.css.scss
@@ -39,6 +39,13 @@
       width: 830px;
       position: relative;
 
+      pairsession {
+        overflow: hidden;
+        display: block;
+        position: relative;
+        margin-bottom: 20px;
+      }
+
       .edit-buttons {
         position: absolute;
         bottom: 10px;
@@ -46,9 +53,11 @@
       }
     }
 
-    .session-edit {
-      padding: 20px 0 20px 0;
+    .session-edit, .session-view form {
+      // padding: 20px 0 20px 0;
       position: relative;
+      width: 830px;
+      margin: 20px auto;
 
       .field {
         margin-bottom: 20px;
