--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -11,40 +11,18 @@
   </div>
 </div>
 
-<div class="user-sessions" ng-app="letspair" ng-controller="UserSessionsCtrl">
+<div class="user-sessions" ng-app="letspair" ng-controller="PairsessionsUserCtrl">
   <div class="calendar-container">
     <calendar daychange='loadDaySessions()'></calendar>
 
     <%= link_to 'edit', user_pairsessions_path(current_user.username), class: 'edit-sessions' %>
-    <!-- <a class="edit-sessions" href="#">edit</a> -->
   </div>
 
   <ul class="sessions">
-    <li class="session-with-contact">
+    <li class="session-with-contact" ng-repeat="session in sessions">
       
-      <div class="information">
-        <p class="brief-information">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</p>
-        <p class="bottom-info-label"><span class="highlighted-text">technologies: </span>&nbsp Lorem Ipsum is simply dummy text of the printing and typesetting</p>
-        <p class="when"><span class="icon-clock"></span> 10am - 2pm</p>
-      </div>
-      <div class="button">
-        <a href="#" class="contact"><%= image_tag "button_contact.png" %></a>
-      </div>
-
-    </li>
-
-    <div class="separator-white"></div>
-
-    <li class="session-with-contact">
-      
-      <div class="information">
-        <p class="brief-information">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</p>
-        <p class="bottom-info-label"><span class="highlighted-text">technologies: </span>&nbsp Lorem Ipsum is simply dummy text of the printing and typesetting</p>
-        <p class="when"><span class="icon-clock"></span> 10am - 2pm</p>
-      </div>
-      <div class="button">
-        <a href="#" class="contact"><%= image_tag "button_contact.png" %></a>
-      </div>
+      <pairsessionuser session='session'></pairsessionuser>
+      <div class="separator-white"></div>
 
     </li>
   </ul>
