--- a/app/assets/templates/pairsession_all.erb
+++ b/app/assets/templates/pairsession_all.erb
@@ -1,5 +1,5 @@
 <div class="avatar">
-  <%= image_tag "test_avatar.jpg" %>
+  <image src="{{session.user_avatar}}"></image>
 </div>
 <div class="information">
   <p class="name"><a href="{{session.userprofile_url}}">{{session.username}}</a><span>&nbsp {{session.timezone}}</span></p>
