--- a/app/assets/templates/pairsession_user.erb
+++ b/app/assets/templates/pairsession_user.erb
@@ -4,5 +4,5 @@
   <p class="when"><span class="icon-clock"></span> {{session.start}} - {{session.end}}</p>
 </div>
 <div class="button">
-  <a href="#" class="contact"><%= image_tag "button_contact.png" %></a>
+  <a href="#" class="contact" ng-click='contact($event)'><%= image_tag "button_contact.png" %></a>
 </div>
